--- a/lib/python/Plugins/SystemPlugins/SoftwareManager/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/SoftwareManager/Makefile.am
@@ -6,15 +6,9 @@ install_PYTHON =	\
 	__init__.py \
 	plugin.py \
 	BackupRestore.py \
-	RestoreWizard.py \
-	SoftwareTools.py \
-	ImageBackup.py \
-	PluginBackup.py \
-	PluginRestore.py \
-	Flash_online.py
+	SoftwareTools.py
 
 dist_install_DATA = \
-	restorewizard.xml \
 	installable.png \
 	installed.png \
 	install.png \
@@ -22,10 +16,4 @@ dist_install_DATA = \
 	remove.png \
 	update.png \
 	upgradeable.png \
-	upgrade.png \
-	PluginBackup.sh \
-	PluginRestore.sh
-	
-install-data-hook:
-	chmod +x $(DESTDIR)$(installdir)/PluginBackup.sh; \
-	chmod +x $(DESTDIR)$(installdir)/PluginRestore.sh;
+	upgrade.png
