--- a/lib/python/Plugins/SystemPlugins/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/Makefile.am
@@ -4,7 +4,10 @@ SUBDIRS = SoftwareManager PositionerSetup Satfinder \
 	SatelliteEquipmentControl Videomode VideoTune Hotplug \
 	DefaultServicesScanner DiseqcTester CommonInterfaceAssignment \
 	CableScan FastScan OSDPositionSetup OSD3DSetup HdmiCEC VideoClippingSetup \
-	VideoEnhancement WirelessLan NetworkWizard
+	VideoEnhancement WirelessLan NetworkWizard CleanupWizard CrashlogAutoSubmit \ 
+	DBusInterfaceProxy DevShell FSBLUpdater FrontprocessorUpgrade  InputDeviceManager \ 
+	JSONApi MediaDatabaseManager NetworkManager RemoteControlSelection SkinSelector \
+	StreamServer TempFanControl UPnP 
 
 if HAVE_TEMPFANCONTROL
 SUBDIRS += TempFanControl
