--- a/lib/python/Plugins/SystemPlugins/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/Makefile.am
@@ -4,11 +4,8 @@ SUBDIRS = SoftwareManager PositionerSetup Satfinder \
 	SatelliteEquipmentControl Videomode VideoTune Hotplug \
 	DefaultServicesScanner DiseqcTester CommonInterfaceAssignment \
 	CableScan FastScan OSDPositionSetup OSD3DSetup HdmiCEC VideoClippingSetup \
-	VideoEnhancement WirelessLan NetworkWizard CleanupWizard CrashlogAutoSubmit \ 
-	DBusInterfaceProxy DevShell FSBLUpdater FrontprocessorUpgrade  InputDeviceManager \ 
-	JSONApi MediaDatabaseManager NetworkManager RemoteControlSelection SkinSelector \
-	StreamServer TempFanControl UPnP 
-
+	VideoEnhancement WirelessLan NetworkWizard
+	
 if HAVE_TEMPFANCONTROL
 SUBDIRS += TempFanControl
 endif
